@@ -15,18 +15,18 @@ def element_of_type(element_type, transform):
             return transform(element)
         else:
             return element
-    
+
     return _each_element(transform_element)
 
 
 def _each_element(transform_element):
     def transform_element_and_children(element):
-        if isinstance(element, documents.HasChildren):
+        if isinstance(element, (documents.HasChildren, documents.TableCellUnmerged)):
             children = list(map(transform_element_and_children, element.children))
             element = element.copy(children=children)
-        
+
         return transform_element(element)
-    
+
     return transform_element_and_children
 
 
